--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -14,7 +14,7 @@
 }
 body
 {
-    background-color:#AFAFA8;
+    background-color:#E4E4E2;
     font-family:Coconut, Verdana, Geneva, Arial, sans-serif;
     min-height:100%;
     width:100%;
