--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -14,7 +14,7 @@
 }
 body
 {
-    background-color:#E4E4E2;
+    background-color:#AFAFA8;
     font-family:Coconut, Verdana, Geneva, Arial, sans-serif;
     min-height:100%;
     width:100%;
@@ -22,6 +22,9 @@ body
 #loading
 {
     background-color:#E4E4E2;
+    width:100%;
+    height:100%;
+    line-height:0;
 }
 #loading .center
 {
