--- a/new/webos/css/webos-css3.css
+++ b/new/webos/css/webos-css3.css
@@ -18,25 +18,74 @@
 }
 .webos-stage
 {
-    position: absolute;
+    position: relative;
     top: 98px;
     left: 35px;
     width: 240px;
     height: 335px;
     -moz-border-radius: 20px;
     border: 1px solid #111;
-    background-color: #222;
+    overflow: hidden;
+    background-color: #e4e4e2;
+}
+.webos-stage-inner
+{
+    position: relative;
+    left: 1px;
+    width: 99%;
+
+}
+.webos-stage-corner
+{
+    z-index: 10000;
+}
+.webos-stage-tl
+{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-image: url(../tl.png);
+    width: 20px;
+    height: 17px;
+}
+.webos-stage-tr
+{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    background-image: url(../tr.png);
+    width: 20px;
+    height: 17px;
+}
+.webos-stage-bl
+{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    background-image: url(../bl.png);
+    width: 18px;
+    height: 16px;
+}
+.webos-stage-br
+{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    background-image: url(../br.png);
+    width: 17px;
+    height: 17px;
 }
 .webos-top-bar
 {
     position: absolute;
-    top: 78px;
+    top: 75px;
     left: 35px;
     width: 240px;
     height: 26px;
     text-align: center;
+    font-size: .85em;
     background-image: url(../icons.png);
-    background-position: right -2px;
+    background-position: right 0px;
     background-repeat: no-repeat;
 }
 .webos-top-bar .webos-time
@@ -50,4 +99,30 @@
     margin: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
-}   
+}
+.webos-time
+{
+    position: relative;
+    top: 4px;
+}
+
+.scene-fade-top
+{
+	position: absolute; 
+	left: 0px;
+    top: 0px; 
+	height: 30px; 
+	z-index: 999;
+    width: 100%;
+	background: url(../images/palm-default/scrollFade-top.png) top center repeat-x;
+}
+.scene-fade-bottom
+{
+	position: absolute; 
+	bottom: 0px;   
+    left: 0px;
+	height: 30px; 
+	width: 100%;
+	z-index: 999;
+	background: url(../images/palm-default/scrollFade-bottom.png) bottom center repeat-x;
+}
